--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "firebase deploy --only hosting:weather-forecast-dashboard"
+    "deploy": "npm run build && firebase deploy --only hosting:weather-forecast-dashboard"
   },
   "eslintConfig": {
     "extends": "react-app"
