--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "serve": "npm run build && firebase serve --only hosting\n",
     "deploy": "npm run build && firebase deploy --only hosting:weather-forecast-dashboard"
   },
   "eslintConfig": {
